--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </style>
     </head>
     <body>
-        
+        <h1>My name is Trung Lai</h1>
+        <p>I am a high school student that likes web development, film production, and cybersecurity. I like playing video games and sleeping. Currently I attend WTCC as a CCP student.</p>
     </body>
 </html>
