--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 background-color: #ededbb;
             }
             h1 {
-                color: #83a177;
+                color: #3b7778;
             }
             p {
                 color: #2e474e;
